kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth
  labels:
    app.kubernetes.io/part-of: subscription-authorizer
